--- a/config.json
+++ b/config.json
@@ -1,1 +1,4 @@
-{"token":"NDg5MTU4OTY1NjcwOTY5MzQ0.DnmtRA.NFbbk3xtyaIA7qo1qgsQerV1MQQ","ServerIDs":[{"ServerID":"485972909567901706"},{"RetrieveID":"208947453024534528"}],"prefix":"!","LogsChannel":"489156205714079744"}
+{
+"token":"NDg5MTU4OTY1NjcwOTY5MzQ0.DnmtRA.NFbbk3xtyaIA7qo1qgsQerV1MQQ",
+"ServerID":"485972909567901706"
+}
