fixed issues and implemented mute

--- a/config.json
+++ b/config.json
@@ -1,1 +1,4 @@
-{"prefix":".","LogsChannel":"486016170235789312","RankSub":"null","SugSub":"null","RankRev":"null","SugRev":"null","MuteRole":"489481124670734338"}
+{
+"token":"NDg5MTU4OTY1NjcwOTY5MzQ0.DnmtRA.NFbbk3xtyaIA7qo1qgsQerV1MQQ",
+"ServerID":"485972909567901706"
+}
